--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "test": "jest --verbose",
     "dev": "nodemon",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "seed": "ts-node src/lib/seed.ts"
   },
   "author": "nahalil",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
     "cors": "^2.8.5",
