--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@faker-js/faker": "^10.1.0",
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@supabase/supabase-js": "^2.89.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
